--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Tarun Choudhary</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+            <p class="section__subtitle section__subtitle--intro">MERN STACK Developer.</p>
             <img src="tarun.jpg" alt="a picture of tarun smiling" class="intro__img">
         </section>
         
@@ -48,7 +48,7 @@
             <div class="services">
                 <div class="service">
                     <h3>Design + Development</h3>
-                    <p>I can design websites for portfolios , E-Commerce website for buisness purposes  . I am passionate of designing creative and responsive websites .</p>
+                    <p>I am a full stack mern developer. React is ❤ . Create Fully fledged websites with mongodb, express, node and React with Beautiful Design and responsive web pages</p>
                 </div> <!-- / service -->
                 
                 <div class="service">
